# dangkiem-predictor

./: .env.example  .gitignore  .prettierignore  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma  seed.ts
apps/api/prisma/migrations/20260515092850_init/: migration.sql
apps/api/src/: config.ts  index.ts  server.ts
apps/api/src/jobs/: ingest-wait-samples.ts  notify-expiring.ts
apps/api/src/lib/: booking-code.ts  db.ts  errors.ts  logger.ts  notifier.ts  predictor-client.ts  vnpay.ts
apps/api/src/plugins/: auth.ts  error-handler.ts
apps/api/src/routes/: auth.ts  booking-transitions.ts  bookings.ts  centers.ts  fleets.ts  health.ts  payments.ts  predictions.ts  proxy-jobs.ts  queue-reports.ts  slots.ts  vehicles.ts
apps/api/src/services/: booking.service.ts
apps/api/test/: booking.test.ts  health.test.ts  ingest.test.ts  notifier.test.ts  predictor-heuristic.test.ts  schemas.test.ts  vnpay.test.ts
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: CenterMap.tsx  PayWithVnpay.tsx
apps/web/src/lib/: api.ts  format.ts
docs/: api.md  architecture.md  prediction-model.md  regulations.md
scripts/: dev.sh
services/predictor/: Dockerfile  pyproject.toml
services/predictor/app/: features.py  main.py  model.py
services/predictor/tests/: test_predict.py
(+7 files in other folders)
