[project]
name = "dangkiem-predictor"
version = "0.1.0"
description = "Wait-time prediction service for Vietnamese vehicle inspection centers"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "numpy==2.1.2",
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2",
  "ruff==0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
